2002-09-25  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp/inp2shp.c: preliminary support for pumps and valves

2002-09-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp/inp2shp.c: pipe vertices are imported now
	
2002-09-20  Steffen Macke <Steffen_Macke@dorsch.com.jo>
	
	* inp2shp/inp2shp.c:
	* inp2shp/README: 
	* inp2shp/Makefile: working on new INP import based
	on the EPANET toolkit and shapelib
	* dcwatdes/license-dcwaterdesignextension.txt: updated copyright
	
2002-09-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.splitpipe: fixed splitting in some cases with a
	approximate split
	* dcwatdesextension.make: marked as version 2.07rc3

2002-08-27  Steffen Macke <Steffen_Macke@dorsch.com.jo>
	
	* dcwatdes.model.epanet.junctions.createmissing: fixed snapping
	lookup in preferences
	* dcwatdesextension.make: marking as version 2.07rc2
	
2002-07-17  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.file.waitfor: initializing variable now (this fix was lost
	somewhere)
	* dcwatdes.model.epanet.run: re-added quotation marks to epanet call 
	* dcwatdesextension.install: menus are translated on project startup
	now
	* dcwatdesextension.make: marking as version 2.07rc1
	
2002-06-25  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.i18n.createdictionaries: added french localization
	* dcwatdes.system.call: the system.call fallback was lost
	
2002-06-24  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.make: Fixed model creation for node themes
	containing only one record. Fixes bug #570335

2002-06-23  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.popupupdate:
	* dcwatdesextension.install: fixed some problems with the popup handling

2002-04-09  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.file.waitfor: initializing variable sleep now
	* dcwatdes.system.call: using System.call() as a backfall if the dll
	call fails (this seems to be the case for Win9* systems)
	