@@ -1,6 +1,6 @@
 
 LINKOPT	=	-L. -lepanet2vc -ggdb
-CFLAGS	=	-mno-cygwin -fnative-struct -ggdb
+CFLAGS	=	-march=pentium -mms-bitfields -ggdb -O2 -Wall
 
 default:	all
 
@@ -12,7 +12,7 @@ shpopen.o:	shpopen.c shapefil.h
 dbfopen.o:	dbfopen.c shapefil.h
 	$(CC) $(CFLAGS) -c dbfopen.c
 
-inp2shp:	inp2shp.c shpopen.o dbfopen.o
+inp2shp:	inp2shp.c shpopen.o dbfopen.o inp2shp.h
 	$(CC) $(CFLAGS) inp2shp.c shpopen.o dbfopen.o $(LINKOPT) -o inp2shp
 
 clean:
